--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -137,15 +137,13 @@ jobs:
 
             # Only show error message and exit if validate: false is not found
             if [ "$has_validate_false" = false ]; then
-                cat <<EOF
-              👋 Hello developer! The SemVer information that you declared in the prdoc file did not match what the CI detected.
-
-              Please check the output above and see the following links for more help:
-              - https://github.com/paritytech/polkadot-sdk/blob/master/docs/contributor/prdoc.md#record-semver-changes
-              - https://forum.polkadot.network/t/psa-polkadot-sdk-to-use-semver
-
-            Otherwise feel free to ask in the Merge Request or in Matrix chat.
-            EOF
+              echo "👋 Hello developer! The SemVer information that you declared in the prdoc file did not match what the CI detected."
+              echo ""
+              echo "Please check the output above and see the following links for more help:"
+              echo "- https://github.com/paritytech/polkadot-sdk/blob/master/docs/contributor/prdoc.md#record-semver-changes"
+              echo "- https://forum.polkadot.network/t/psa-polkadot-sdk-to-use-semver"
+              echo ""
+              echo "Otherwise feel free to ask in the Merge Request or in Matrix chat."
 
               exit 1
             else
