--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -135,6 +135,8 @@ jobs:
               done < "$prdoc_file"
             fi
 
+            echo "has_validate_false: $has_validate_false"
+
             # Only show error message and exit if validate: false is not found
             if [ "$has_validate_false" = false ]; then
               echo "👋 Hello developer! The SemVer information that you declared in the prdoc file did not match what the CI detected."
