--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -128,7 +128,7 @@ jobs:
 
             exit 1
           fi
-          
+
           # Only enforce SemVer restrictions for backports targeting stable branches
           if [[ "$BASE_BRANCH" != stable* && "$BASE_BRANCH" != unstable* ]]; then
               echo "ℹ️ Branch '$BASE_BRANCH' is not a (un)stable branch. Skipping SemVer backport-specific enforcements."
@@ -138,6 +138,29 @@ jobs:
           echo "🔍 Backport branch detected, checking for disallowed semver changes..."
 
           prdoc_file="prdoc/pr_$PR.prdoc"
+
+          # Check for minor/patch bumps with validate: false
+          if grep -qE "bump:[[:space:]]*(minor|patch)" "$prdoc_file"; then
+              minor_patch_temp=$(mktemp)
+              grep -A1 -E "bump:[[:space:]]*(minor|patch)" "$prdoc_file" > "$minor_patch_temp"
+
+              has_validate_false=false
+              while read -r line; do
+                  if [[ "$line" =~ bump:[[:space:]]*(minor|patch) ]]; then
+                      read -r next_line
+                      if [[ "$next_line" =~ validate:[[:space:]]*false ]]; then
+                          has_validate_false=true
+                          break
+                      fi
+                  fi
+              done < "$minor_patch_temp"
+
+              rm -f "$minor_patch_temp"
+
+              if [ "$has_validate_false" = true ]; then
+                  echo "ℹ️ Found minor/patch bumps with validate: false override. Semver validation was skipped for these crates by parity-publish."
+              fi
+          fi
 
           # Check if there are any major bumps
           if ! grep -q "bump:[[:space:]]*major" "$prdoc_file"; then
