--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -100,6 +100,7 @@ jobs:
           echo "PR_NUMBER=$original_pr_number" >> $GITHUB_ENV
 
       - name: Check semver
+        shell: bash
         env:
           PRDOC_EXTRA_ARGS: ${{ env.PRDOC_EXTRA_ARGS }}
           PR: ${{ env.PR_NUMBER }}
